--- a/style.css
+++ b/style.css
@@ -63,4 +63,33 @@ a{
 .where{
   color:rgb(105, 149, 247)
 }
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: rgb(196, 225, 215);
+  padding: 10px;
+}
+.grid-item1 {
+   font-size: 40px;
+  color: green;
+  text-align: center;
+  font-family: inherit;
+   border: 1px solid rgba(0, 0, 0, 0.8);
+  }
+ .grid-item2 {
+   font-style:italic;
+   text-shadow: -3px 3px;
+   font-size: 35px;
+   color: blue;
+   text-align: center;
+   font-family: cursive;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: left;
+}
 
