--- a/style.css
+++ b/style.css
@@ -35,14 +35,7 @@ p {
   max-height: 100%;
   border-radius: 20px;
 }
-a{
-  color: red;
-  text-align: center;
-  font-size: 30px;
-  font-family: fantasy;
-  padding-top: 100px;
-  
-}
+
 
 .grid-container {
   display: grid;
@@ -66,5 +59,14 @@ a{
    text-align: center;
    font-family: cursive;
 }
+.grid-item {
+  
+  padding-top: 100px;
+  font-size: 30px;
+  text-align: center;
+  color: red;
+  font-family: fantasy;
+}
+
 
 
