--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-.img{
-  width:400px;
-  height: 300px;
-  border-radius: 20px;
-}
 body {
   background-color: antiquewhite;
   font-family: inherit;
@@ -25,49 +20,46 @@ h2 {
   color: deeppink;
   font-size: 30px;
 }
-
-
-
+h3 {
+  color: #f49807;
+  font-style:normal;
+  font-family:sans-serif
+}
+h4{
+  font-size: 18px;
+  text-decoration:underline;
+  text-align: center;
+  color:rgb(121, 79, 29)
+  
+}
+h6{
+  text-align: right;
+  color: black;
+  
+}
 p {
   font-style:normal;
   color: rgb(94, 46, 116);
  
   
 }
+ul {
+  font-style:normal;
+  color: rgb(94, 46, 116);
 
-
-
-
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  background-color: rgb(196, 225, 215);
-  padding: 10px;
-     border: 1px solid rgba(0, 0, 0, 0.8);
 }
-.grid-item1 {
-   font-size: 40px;
-  color: green;
-  text-align: center;
-  font-family: inherit;
-   border: 1px solid rgba(0, 0, 0, 0.8);
-  }
- .grid-item2 {
-   font-style:italic;
-   text-shadow: -3px 3px;
-   font-size: 35px;
-   color: blue;
-   text-align: center;
-   font-family: cursive;
+img{
+  width: 400px;
+  height: 300px;
+  float: right;
+  border-style:dotted;
+  border-color: darkred;
+  border-radius: 20px;
 }
-.grid-item {
-  
-  padding-top: 100px;
-  font-size: 30px;
-  text-align: center;
+a{
   color: red;
-  font-family: fantasy;
+  
 }
-
-
-
+.where{
+  color:rgb(105, 149, 247)
+}
